--- a/checkout/style.css
+++ b/checkout/style.css
@@ -80,7 +80,8 @@
   display: flex;
   gap: 20px;
   max-width: 1100px;
-  margin: auto;
+  margin-top: 80px;
+    margin-bottom: 150px;
 }
 
 .checkout-left,
