--- a/login/style.css
+++ b/login/style.css
@@ -176,6 +176,11 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
+  .background{
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
 }
 
 
